[package]
name = "librollenspielsache"
description = "API for working with tabletop RPG entities."
keywords = ["fun"]
version = "0.1.0"
authors = ["Ben Lovy <ben@deciduously.com>"]
edition = "2018"
license = "BSD-3-Clause"
repository = "https://github.com/deciduously/librollenspielsache"
homepage = "https://crates.io/crates/librollenspielsache"
readme = "README.md"
documentation = "https://docs.rs/librollenspielsache"
include = [
    "**/*.rs",
    "Cargo.toml",
]

[lib]
name = "rollenspielsache"
crate-type = ["cdylib", "rlib"]

[profile.release]
lto = true

[dependencies]

libc = "0.2"
lazy_static = "1.4"
rand = { version =  "0.7", features = ["small_rng"] }
redis = "0.15"
r2d2_redis = "0.13"
regex = "1"
thiserror = "1"

[dev-dependencies]

pretty_assertions = "0.6"
