[package]
authors = ["Ben Lovy <ben@deciduously.com>"]
description = "API for working with tabletop RPG entities."
documentation = "https://docs.rs/librollenspielsache"
edition = "2018"
homepage = "https://crates.io/crates/librollenspielsache"
include = ["**/*.rs", "Cargo.toml"]
keywords = ["fun"]
license = "BSD-3-Clause"
name = "librollenspielsache"
readme = "README.md"
repository = "https://github.com/deciduously/librollenspielsache"
version = "0.2.0"

[dependencies]
lazy_static = "1.4"
libc = "0.2"
regex = "1"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
thiserror = "1.0"

[dependencies.rand]
features = ["small_rng"]
version = "0.7"

[dev-dependencies]
pretty_assertions = "0.6"

[lib]
crate-type = ["cdylib", "rlib"]
name = "rollenspielsache"

[profile]
[profile.release]
lto = true
